# yd_upd_approver

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_mini_app_upload_source.py  0003_app_settings.py  0004_user_folder_names.py  0005_upload_queue_worker.py  0006_repair_upload_mode_backfill.py  0007_repair_queued_legacy_retries.py  0007_repair_queued_retries.py  0008_telegram_outbox.py  0009_db_integrity.py  0010_upload_created_index.py
app/: config.py  logging_config.py  main.py
app/api/: deps.py  errors.py  main.py  middleware.py  pagination.py  schemas.py  security.py
app/bot/: callbacks.py  keyboards.py  middlewares.py  router.py
app/db/: models.py  repositories.py  session.py
app/scripts/: cleanup_temp.py
app/services/: app_settings.py  approval.py  audit.py  commit_safety.py  disk_paths.py  file_policy.py  naming.py  storage.py  telegram_files.py  telegram_outbox.py  upload_queue.py  user_folder_rename.py  user_folders.py  yandex_disk.py
app/utils/: formatting.py  pagination.py  security.py
app/webapp/: index.html
app/workers/: telegram_outbox_worker.py  upload_worker.py
docs/: IMPLEMENTATION_PLAN.md  MANUAL_QA.md  MINI_APP.md
tests/integration/: test_upload_mode_repair_migration.py  test_upload_queue_concurrency.py
tests/unit/: test_admin_callback.py  test_admin_folder_rename_api.py  test_admin_upload_callbacks.py  test_alembic_revision_ids.py  test_api_errors.py  test_api_upload_hardening.py  test_app_settings.py  test_approval.py  test_cleanup_temp.py  test_config.py  test_disk_paths.py  test_disk_root_settings.py  test_docker_compose.py  test_document_upload_flow.py  test_folder_rename_static.py  test_frontend_disk_root_static.py  test_frontend_error_handling_static.py  test_idempotency_review_fixes.py  test_keyboard_failed_actions.py  test_mini_app_security.py  test_mini_app_static.py  test_naming_security.py  test_pagination.py  test_request_code.py  test_runtime_root_approval.py  test_storage.py  test_telegram_file_streaming.py  (+10 more)
(+10 files in other folders)
